<resources>
    <string name="app_name">FeastExpress</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="feastexpress">FeastExpress</string>
    <string name="hello_welcome_to_our_food_ordering_app">Hello!Welcome to our Food Ordering App</string>
    <string name="get_started">Get Started</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_id1">Enter Email Id</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="signin">signin</string>
    <string name="do_not_have_account">Do not have account?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="logout">logout</string>
    <string name="search">Search</string>
    <string name="pizza">pizza</string>
</resources>